# splunk

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  123-fixed-with-alerts.xml  123-fixed.xml  123.xml  ACTUAL_OPERATION_ANALYSIS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  D1-KV-SETUP-COMPLETE.md  Dockerfile  E2E_TESTING_GUIDE.md  GITLAB-PUSH-INSTRUCTIONS.txt  INDEX.txt  LARGE_SCALE_80_DEVICES_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PHASE-10-SUMMARY.md  PHASE-2F-COMPLETION-REPORT.md  PHASE-3-INTEGRATION-REPORT.md  PHASE-3-TEST-TRIGGER.md  PROJECT-COMPLETE.txt  QUERY.spl  QUICK-START.md  README.md  SPLUNK_HEC_PRODUCTION_VERIFICATION.md  STRUCTURE.md  build-analysis-report.md  build.js  cloudflare-naming-migration.md  cloudflare-resources-setup.md  deploy-hybrid.sh  deployment-logs-report.md  docker-compose.yml  fw_log_export_query.spl  in-memoria.db  index.js  (+12 more)
.claude/: settings.local.json
.github/: WORKFLOW_TEST_MARKER.md  dependabot.yml
.serena/: project.yml
ansible/: deploy-alerts.yml  inventory.ini.example
archived/: README.md
backend/: AGENTS.md  server.js
configs/: 123.csv  DEPLOY.sh  DEPLOYMENT-FMG-FAZ.md  DEPLOYMENT_CHECKLIST.md  alert_actions-slack-blockkit.conf  alert_actions.conf  check_valid_spl.py  collections.conf  correlation-rules.conf  datamodels.conf  docker-compose-demo.yml  enhanced-fortinet-dashboard.xml  fmg-faz-logid-exclusions.conf  fortianalyzer-hec-direct.conf  fortigate-alert-format-test.xml  fortigate-alerts-all.conf  fortigate-hec-setup.conf  fortigate-syslog.conf  indexes-fmg-faz.conf  (+16 more)
(+582 files in other folders)
