[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splunk-app-ci-validation"
version = "2.0.4"
description = "Splunk Fortigate Security Alert App - CI/CD validation"
requires-python = ">=3.8"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint]
disable = ["C0111"]  # Missing docstring
max-line-length = 88
